[I18N] payment: translate fields Force Payment Acquirer

--- a/addons/payment/i18n/vi.po
+++ b/addons/payment/i18n/vi.po
@@ -2408,3 +2408,9 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:payment.payment_acquirer_onboarding_wizard_form
 msgid "to choose another payment method."
 msgstr "để chọn một phương thức thanh toán khác."
+
+#. module: payment
+#: code:addons/payment/wizards/payment_link_wizard.py:0
+#, python-format
+msgid "Force Payment Acquirer"
+msgstr "Tổ chức thanh toán bắt buộc"
