--- a/addons/hr_presence/i18n/vi.po
+++ b/addons/hr_presence/i18n/vi.po
@@ -247,4 +247,4 @@ msgstr ""
 #: code:addons/hr_presence/models/hr_employee.py:0
 #, python-format
 msgid "Employee's Presence to Define"
-msgstr "Xác định sự hiện diện của nhân viên"
+msgstr "Sự hiện diện của nhân viên"
